deploy/mighty/mighty-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
  creationTimestamp: null
  name: mighty-fine
  namespace: dev
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: mighty-fine
          servicePort: 3000
        path: /mighty-fine
status:
  loadBalancer: {}
